manifests/asciinema/asciinema/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asciinema
  name: asciinema-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asciinema
  template:
    metadata:
      labels:
        app: asciinema
    spec:
      serviceAccountName: asciinema-sa
      containers:
      - image: ghcr.io/asciinema/asciinema-server:latest
        name: asciinema
        ports:
        - name: http
          containerPort: 4000
