manifests/asciinema/asciinema/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asciinema
  name: asciinema-svc
spec:
  selector:
    app: asciinema
  ports:
  - name: http
    port: 80
    targetPort: 4000
  type: ClusterIP
