manifests/asciinema/asciinema/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asciinema-ingress
  labels:
    app: asciinema
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-ciss"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - asciinema.shi.st
    - asciinema.termz.xyz
    - asciinema.terminalnode.xyz
    secretName: asciinema-tls-secret
  rules:
  - host: "asciinema.shi.st"
    http: &http-routing
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asciinema-svc
            port:
              number: 80
  - host: "asciinema.termz.xyz"
    http: *http-routing
  - host: "asciinema.terminalnode.xyz"
    http: *http-routing

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asciinema-dot-gwai-ingress
  labels:
    app: asciinema
  annotations:
    cert-manager.io/cluster-issuer: "dot-gwai-ciss"
    cert-manager.io/common-name: "Gwainet Asciinema Service"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - asciinema.gwai
    secretName: dot-gwai-ca-secret
  rules:
  - host: "asciinema.gwai"
    http: &http-routing
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asciinema-svc
            port:
              number: 80
